Loom: Fix build failures for PPC64, S390, ARM32 and Zero

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • repo-loom
    • Affects Version/s: repo-loom
    • Component/s: hotspot
    • None
    • generic
    • linux

      In Loom repo, updates made in commits [1][2][3][4] are missing for PPC64, S390, ARM32
      and Zero, leading to build failures.

      [1] https://github.com/openjdk/loom/commit/4f9b661
      [2] https://github.com/openjdk/loom/commit/74b27d0
      [3] https://github.com/openjdk/loom/commit/90fb1b9
      [4] https://github.com/openjdk/loom/commit/d77311e

      Here is the snippet of error msg, produced for ppc64le build.
      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-server_libjvm_objs_abstractDisassembler.o:
      In file included from /home/runner/work/loom/loom/jdk/src/hotspot/share/runtime/frame.inline.hpp:44,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/oops/stackChunkOop.inline.hpp:32,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/oops/instanceStackChunkKlass.inline.hpp:42,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/memory/iterator.inline.hpp:38,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/utilities/bitMap.inline.hpp:30,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/shared/markBitMap.inline.hpp:33,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/g1/g1ConcurrentMarkBitMap.inline.hpp:30,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/g1/g1ConcurrentMark.inline.hpp:31,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/g1/g1CollectedHeap.inline.hpp:33,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/g1/g1BarrierSet.inline.hpp:31,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/shared/barrierSetConfig.inline.hpp:37,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/oops/access.inline.hpp:31,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/oops/oop.inline.hpp:31,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/compiler/abstractDisassembler.cpp:32:
      /home/runner/work/loom/loom/jdk/src/hotspot/cpu/ppc/frame_ppc.inline.hpp:175:18: error: no declaration matches 'intptr_t* frame::interpreter_frame_expression_stack() const'
         ... (rest of output omitted)
      * For target hotspot_variant-server_libjvm_objs_abstractInterpreter.o:
      In file included from /home/runner/work/loom/loom/jdk/src/hotspot/share/runtime/frame.inline.hpp:44,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/oops/stackChunkOop.inline.hpp:32,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/oops/instanceStackChunkKlass.inline.hpp:42,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/memory/iterator.inline.hpp:38,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/utilities/bitMap.inline.hpp:30,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/shared/markBitMap.inline.hpp:33,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/g1/g1ConcurrentMarkBitMap.inline.hpp:30,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/g1/g1ConcurrentMark.inline.hpp:31,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/g1/g1CollectedHeap.inline.hpp:33,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/g1/g1BarrierSet.inline.hpp:31,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/gc/shared/barrierSetConfig.inline.hpp:37,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/oops/access.inline.hpp:31,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/oops/oopHandle.inline.hpp:30,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/oops/cpCache.inline.hpp:30,
                       from /home/runner/work/loom/loom/jdk/src/hotspot/share/interpreter/abstractInterpreter.cpp:40:
         ... (rest of output omitted)

      * All command lines available in /home/runner/work/loom/loom/jdk/build/linux-powerpc64le-hotspot/make-support/failure-logs.
      === End of repeated output ===

            Assignee:
            Hao Sun
            Reporter:
            Hao Sun
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: