8282468: Loom: Fix build failures for PPC64, S390, ARM32 and Zero

Reviewed-by: alanb, rpressler